cros: Ensure login bubbles are clickable when overlapping with shelf and virtual keyboard

Bug: 884668
Change-Id: I16dd2c5b0156bf1490b57acd4185c1d80d193a67
Reviewed-on: https://chromium-review.googlesource.com/c/1330206
Reviewed-by: Jacob Dufault <jdufault@chromium.org>
Commit-Queue: Quan Nguyen <qnnguyen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#607771}