ash/login/ui/login_base_bubble_view.cc
@@ -27,6 +27,10 @@ constexpr int kBubbleBottomMarginDp = 18;
 }  // namespace
 
 LoginBaseBubbleView::LoginBaseBubbleView(views::View* anchor_view)
+    : LoginBaseBubbleView(anchor_view, nullptr) {}
+
+LoginBaseBubbleView::LoginBaseBubbleView(views::View* anchor_view,
+                                         aura::Window* parent_window)
     : BubbleDialogDelegateView(anchor_view, views::BubbleBorder::NONE) {
   set_margins(gfx::Insets(kBubbleTopMarginDp, kBubbleHorizontalMarginDp,
                           kBubbleBottomMarginDp, kBubbleHorizontalMarginDp));
@@ -37,6 +41,8 @@ LoginBaseBubbleView::LoginBaseBubbleView(views::View* anchor_view)
   // Layer rendering is needed for animation.
   SetPaintToLayer();
   layer()->SetFillsBoundsOpaquely(false);
+
+  set_parent_window(parent_window);
 }
 
 LoginBaseBubbleView::~LoginBaseBubbleView() = default;
@@ -44,15 +50,13 @@ LoginBaseBubbleView::~LoginBaseBubbleView() = default;
 void LoginBaseBubbleView::OnBeforeBubbleWidgetInit(
     views::Widget::InitParams* params,
     views::Widget* widget) const {
-  // Login bubbles must always be associated with the lock screen container,
-  // otherwise they may not show up as other containers are hidden.
-  //
-  // params->parent may be already set if the bubble has an anchor view.
-
-  // Shell may be null in tests.
+  // This case only gets called if the bubble has no anchor and no parent
+  // container was specified. In this case, the parent container should default
+  // to MenuContainer, so that login bubbles are visible over the shelf and
+  // virtual keyboard. Shell may be null in tests.
   if (!params->parent && Shell::HasInstance()) {
     params->parent = Shell::GetContainer(Shell::GetPrimaryRootWindow(),
-                                         kShellWindowId_LockScreenContainer);
+                                         kShellWindowId_MenuContainer);
   }
 }
 
